xiu-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: xiu-prod-ns
  labels:
    app: xiu
    environment: prod
