xiu-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xiu-prod-service
  namespace: xiu-prod-ns
  labels:
    app: xiu
    environment: prod
spec:
  selector:
    app: xiu-prod-pod
  ports:
    - name: hls
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: httpflv
      port: 8081
      targetPort: 8081
      protocol: TCP
    - name: rtmp
      port: 1935
      targetPort: 1935
      protocol: TCP
